--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "e_commerce_app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/admin",
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^9.0.0",
     "@date-io/date-fns": "^3.0.0",
@@ -34,6 +35,9 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.9",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
